V0.6.2 Needed to re-think what I was coding because requirements did not fit. Got the weather API working correctly and everything is displaying correctly. Fixed the tests to reflect my changes also but need more tests.

--- a/views/css/submissions.css
+++ b/views/css/submissions.css
@@ -4,9 +4,11 @@
 
 #post{
 	padding-top: 5px; 
+	padding-left: 5px;
 	list-style-position:inside; 
 	padding-bottom: 5px; 
 	list-style: none;
+	border: 1px solid black;
 }
 
 #reply{
@@ -14,10 +16,11 @@
 	list-style: none; 
 	padding-top: 5px; 
 	padding-bottom: 5px; 
-	margin-left: 20px;
+	margin-left: 30px;
+	margin-bottom: 10px;
 }
 
-#allposts{
+#all{
 	border: 1px solid black;
 }
 
@@ -29,4 +32,13 @@
 #btn{
 	margin-top: 30px;
 	margin-left: 15px;
+}
+
+#allPosts{
+	margin-bottom: 150px;
+}
+
+#listItems{
+	padding-right: 40px;
+	padding-bottom: 40px;
 }
